tests/NormalTests/paczka1/small_fuzzy/66518272.err
Error in line 5: mSkO2 A856 79,7
Error in line 8: E08 A856 87,9
